<resources>
    <string name="app_name">CrowdControl</string>
    <string name="enter_verification_code">OTP Verification</string>
    <string name="please_enter_sms_verification_code">Please enter the six digit code sent to you</string>
    <string name="submit">Submit</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="hint_phone_number">(555) 555–5555</string>
    <string name="api_key">AIzaSyBAEGdMGEo-PcGJ3wfnqMJMrVYJXvizOiY</string>
    <string name="debug_number">9253052424</string>
    <string name="placeholder">Placeholder</string>
    <string name="string_placeholder">title</string>
    <string name="string_string_placeholder">business</string>
    <string name="title_goes_here">Title goes here</string>
    <string name="place_title">Business</string>
    <string name="confirm_exit">Exit</string>
    <string name="agree">Exit</string>
    <string name="disagree">Cancel</string>
    <string name="your_message">Are you sure you want to exit?</string>
    <string name="test_text_view">Test Text View</string>
    <string name="permissions_dialog">Permissions not accepted!</string>
    <string name="permissions_denied_dialog">Please accept the required permissions</string>
    <string name="ok_button">ok</string>
    <string name="current_playlist">Current Playlist</string>
    <string name="song_request">Song request</string>
    <string name="menu_requested">menu_requested</string>
    <string name="menu_current">menu_current</string>
</resources>