<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otp_background"
    android:gravity="center_horizontal"
    tools:context=".ui.login.LoginActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/contrail_one"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="48sp"
        android:textStyle="bold"
        app:fontFamily="@font/contrail_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/enter_your_phone_number"
        android:textAlignment="center"
        android:textColor="@color/dracula_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHint">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_contentColor="@color/dracula_white"
            app:ccp_countryPreference="US,UK"
            app:ccp_defaultLanguage="ENGLISH" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/circular_std_bold"
            android:gravity="center"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:maxLength="14"
            android:singleLine="true"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/verificationButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/submit"
        android:textColor="@color/dracula_white"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>